--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
 .tile {
-  background-color: black; }
+  background-color: black;
+  display: inline-block;
+  overflow: hidden;
+  font-size: large;
+  margin: 0px;
+  padding: 0px;
+  width: 25px;
+  height: 25px; }
+
+#board {
+  width: 750px;
+  display: inline-block;
+  font-size: 0; }
 
 /*# sourceMappingURL=style.css.map */
