--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,12 @@
   display:inline-block;
   font-size:0;
 }
+#inventory{
+  height: 750px;
+  width: 20px;
+  background-color: green;
+  float:left;
+}
 .visitedTile {
   background-color: grey !important;
 }
