added spacing between grid items

--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,7 @@ h2{
   display: inline-block;
   font-size:0;
   border: 2px solid black;
+  margin-left:2px;
 }
 .visitedTile {
   background-color: grey !important;
