--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ h2 {
   width: 60px;
   display: inline-block;
   font-size: 0;
-  border: 2px solid black; }
+  border: 2px solid black;
+  margin-left: 2px; }
 
 .visitedTile {
   background-color: grey !important; }
