add ability to add text to inventory

--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ h2 {
   display: inline-block;
   font-size: 0;
   border: 2px solid black;
-  margin-left: 2px; }
+  margin-left: 2px;
+  overflow: hidden; }
 
 .visitedTile {
   background-color: grey !important; }
