--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,7 @@ h2{
   font-size:0;
   border: 2px solid black;
   margin-left:2px;
+  overflow: hidden;
 }
 .visitedTile {
   background-color: grey !important;
