add garden tiles around house

--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,9 @@ h2{
   height:25px;
   color:black;
 }
+.garden{
+  background-color: #8B4513 !important;
+}
 #board{
   width: 750px;
   display:inline-block;
