add graphic styling to scss to get icons to appear in inv

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h2 {
   height: 60px;
   width: 60px;
   display: inline-block;
-  font-size: 0;
+  font-size: xx-large;
   border: 2px solid black;
   margin-left: 2px;
   overflow: hidden; }
