--- a/style.css
+++ b/style.css
@@ -18,12 +18,19 @@ h2 {
 #board {
   width: 600px;
   display: inline-block;
-  font-size: 0; }
+  font-size: 0;
+  float: left; }
 
 #inventory {
   height: 600px;
   width: 200px;
   background-color: green;
+  float: left; }
+
+#gameCommunications {
+  height: 600px;
+  width: 200px;
+  background-color: orange;
   float: left; }
 
 .inventory-item {
