--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,7 @@
+@mixin side-dimensions(){
+  height: 600px;
+  width: 200px;
+}
 h2{
   text-align: center;
 }
@@ -19,11 +23,16 @@ h2{
   width: 600px;
   display:inline-block;
   font-size:0;
+  float:left;
 }
 #inventory{
-  height: 600px;
-  width: 200px;
+  @include side-dimensions;
   background-color: green;
+  float:left;
+}
+#gameCommunications{
+  @include side-dimensions;
+  background-color: orange;
   float:left;
 }
 .inventory-item{
