--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ h2 {
   background-color: orange;
   float: left; }
 
+#storyline {
+  height: 400px; }
+
 .inventory-item {
   height: 60px;
   width: 60px;
