--- a/style.scss
+++ b/style.scss
@@ -38,6 +38,8 @@ h2{
 #storyline{
   height: 400px;
   overflow: auto;
+  border: 2px solid black;
+  margin:5px;
 }
 .inventory-item{
   height: 60px;
