inventory only shows items with a qty  > 0

--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,13 @@
   height: 600px;
   width: 200px;
 }
+@mixin blue-gradient(){
+    background: #32a5fc; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#42b0fb, #32a5fc); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#42b0fb, #32a5fc); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#42b0fb, #32a5fc); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#42b0fb, #32a5fc); /* Standard syntax */
+}
 *{
   font-family: "Helvetica Neue", helvetica, sans-serif;
 }
@@ -30,12 +37,12 @@ h2{
 }
 #inventory{
   @include side-dimensions;
-  background-color: #32a5fc;
+  @include blue-gradient;
   float:left;
 }
 #gameCommunications{
   @include side-dimensions;
-  background-color: #32a5fc;
+  @include blue-gradient;
   float:left;
 }
 #storyline{
