--- a/style.css
+++ b/style.css
@@ -27,13 +27,31 @@ h2 {
 #inventory {
   height: 600px;
   width: 200px;
-  background-color: #32a5fc;
+  background: #32a5fc;
+  /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#42b0fb, #32a5fc);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#42b0fb, #32a5fc);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#42b0fb, #32a5fc);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#42b0fb, #32a5fc);
+  /* Standard syntax */
   float: left; }
 
 #gameCommunications {
   height: 600px;
   width: 200px;
-  background-color: #32a5fc;
+  background: #32a5fc;
+  /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#42b0fb, #32a5fc);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#42b0fb, #32a5fc);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#42b0fb, #32a5fc);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#42b0fb, #32a5fc);
+  /* Standard syntax */
   float: left; }
 
 #storyline {
