--- a/style.css
+++ b/style.css
@@ -75,9 +75,15 @@ h2 {
   width: 60px;
   display: inline-block;
   font-size: xx-large;
-  border: 2px solid black;
-  margin-left: 2px;
+  background-color: rgba(255, 255, 255, 0.6) !important;
+  border-radius: 5px;
+  margin-left: 5px;
   overflow: hidden; }
+
+#stats {
+  background-color: rgba(255, 255, 255, 0.6) !important;
+  border-radius: 5px;
+  margin: 5px; }
 
 .visitedTile {
   background-color: #e5e5ea !important; }
