--- a/style.scss
+++ b/style.scss
@@ -66,9 +66,16 @@ h2{
   width: 60px;
   display: inline-block;
   font-size: xx-large;
-  border: 2px solid black;
-  margin-left:2px;
+  //border: 2px solid black;
+  background-color: transparentize(white, 0.4) !important;
+  border-radius: 5px;
+  margin-left:5px;
   overflow: hidden;
+}
+#stats{
+  background-color: transparentize(white, 0.4) !important;
+  border-radius: 5px;
+  margin:5px;
 }
 .visitedTile {
   background-color: #e5e5ea !important;
