--- a/style.scss
+++ b/style.scss
@@ -3,11 +3,11 @@
   width: 200px;
 }
 @mixin blue-gradient(){
-    background: #32a5fc; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(#42b0fb, #32a5fc); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#42b0fb, #32a5fc); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#42b0fb, #32a5fc); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#42b0fb, #32a5fc); /* Standard syntax */
+  background: #40F9E7; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left top, #40F9E7, #F9BA25); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #40F9E7, #F9BA25); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #40F9E7 #F9BA25); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #40F9E7, #F9BA25); /* Standard syntax */
 }
 *{
   font-family: "Helvetica Neue", helvetica, sans-serif;
