--- a/style.scss
+++ b/style.scss
@@ -50,32 +50,33 @@ h2, h3{
   overflow: auto;
 }
 #quests{
-  height: 180px;
+  height: 152px;
 }
 #gameCommunications > div{
   overflow: auto;
-  border: 2px solid black;
-  margin:5px;
+  background-color: transparentize(white, 0.4) !important;
+  border-radius: 5px;
+  margin:8px;
 }
 .stat{
   display:inline;
   margin: 10px;
 }
 .inventory-item{
-  height: 60px;
-  width: 60px;
+  height: 56px;
+  width: 56px;
   display: inline-block;
   font-size: xx-large;
   //border: 2px solid black;
   background-color: transparentize(white, 0.4) !important;
   border-radius: 5px;
-  margin-left:5px;
+  margin-left:8px;
   overflow: hidden;
 }
 #stats{
   background-color: transparentize(white, 0.4) !important;
   border-radius: 5px;
-  margin:5px;
+  margin:8px;
 }
 .visitedTile {
   background-color: #e5e5ea !important;
